RESOLVED FIXED40790
Fix build break with inspector disabled
https://bugs.webkit.org/show_bug.cgi?id=40790
Summary Fix build break with inspector disabled
Ben Murdoch
Reported 2010-06-17 10:46:44 PDT
With the inspector not enabled, the build breaks due to the #include of InspectorValues.h in InspectorController.h because the content of InspectorValues is guarded by #if ENABLE(INSPECTOR). Turns out we don't need the include at all and a forward declaration is enough. Patch coming.
Attachments
Patch. (1.37 KB, patch)
2010-06-17 10:54 PDT, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2010-06-17 10:54:12 PDT
WebKit Commit Bot
Comment 2 2010-06-19 06:55:01 PDT
Comment on attachment 59013 [details] Patch. Clearing flags on attachment: 59013 Committed r61485: <http://trac.webkit.org/changeset/61485>
WebKit Commit Bot
Comment 3 2010-06-19 06:55:06 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.