2010-06-19  Ben Murdoch  <benm@google.com>

Reviewed by Pavel Feldman.

        Fix build break with inspector disabled.
        https://bugs.webkit.org/show_bug.cgi?id=40790

        Replace a #include with a forward declaration.

        Fixing a build break so no new tests required.

        * inspector/InspectorController.h: Forward declare InspectorValue
           rather than #including its header which has its content guarded
           out.

git-svn-id: svn://svn.chromium.org/blink/trunk@61485 bbb929c8-8fbe-4397-9dbb-9b2b20218538