third_party/WebKit/WebCore/inspector/InspectorController.h
@@ -33,7 +33,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "Console.h"
 #include "Cookie.h"
 #include "InspectorDOMAgent.h"
-#include "InspectorValues.h"
 #include "PlatformString.h"
 #include "ScriptArray.h"
 #include "ScriptBreakpoint.h"
@@ -71,6 +70,7 @@ class InspectorCSSStore;
 class InspectorFrontend;
 class InspectorFrontendClient;
 class InspectorTimelineAgent;
+class InspectorValue;
 class KURL;
 class Node;
 class Page;
